Remove primary color variable from CSS for future customization

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Seize The Set Boardgame - เกมยึดครองเซต</title>
 <style>
   :root {
-    --primary: #ff4f9a;
+    /* --primary: #ff4f9a; */
     --secondary: #7c3aed;
     --dark: #1f2937;
     --light: #f8fafc;
